# feast-explore

./: .gitignore  README.md  pyproject.toml
local_demo/feature_repo/: example_repo.py  feature_store.yaml  notebook.ipynb
rag_demo/: generate_sample_data.py  notebook.ipynb
rag_demo/feature_repo/: data_ingestion.py  feature_repo.py  feature_store.yaml
