[project]
name = "feast-explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "feast[milvus,nlp]>=0.51.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "marshmallow<4.0.0",
    "openai>=1.97.1",
    "pypdf>=5.9.0",
    "sentence-transformers>=5.0.0",
]
